# web/api/login.go
@@ -40,7 +40,7 @@ type Registerinfo struct {
 // @Success 200 {string} json "{"Result": object}"
 // @Failure  500 {string} json "{"Result": null}"
 // @Failure  301 {string} json "{"Error":"Re-login","Data": object}"
-// @Router /login [put]
+// @Router /login/register [put]
 func Register(c *gin.Context) {
 	registerinfo := Registerinfo{}
 	err := c.ShouldBind(&registerinfo)
@@ -106,7 +106,7 @@ func Register(c *gin.Context) {
 // @Success 200 {string} json "{"Error":"Success","Data": object}"
 // @Failure  500 {string} json "{"Error":"error","Data": null}"
 // @Failure  301 {string} json "{"Error":"Re-login","Data": object}"
-// @Router /login [get]
+// @Router /login/register/name [get]
 func CheckUserName(c *gin.Context) {
 	name := c.Query("name")
 	if len(name) > 20 || name == "" {
@@ -232,6 +232,7 @@ func Login(c *gin.Context) {
 			userInfo.Email = "******" + userInfo.Email[len(emails[0]):]
 		}
 	}
+	c.Header("Authorization", jwt)
 	retSuccess(c, map[string]interface{}{
 		"id":        userInfo.ID,
 		"jwt":       jwt,
@@ -369,6 +370,7 @@ func GetLoginInfo(c *gin.Context) {
 		}
 	}
 	jwt := c.GetHeader("Authorization")
+	c.Header("Authorization", jwt)
 	retSuccess(c, map[string]interface{}{
 		"id":        userInfo.ID,
 		"jwt":       jwt,
